<resources>
    <string name="app_name">Notes</string>

    <string name="menu_create_new">New</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="menu_caps_enabled">Caps enabled</string>
    <string name="menu_caps_disabled">Caps disabled</string>
    <string name="menu_note_title">Note title</string>

    <string name="context_rename">Rename</string>
    <string name="context_delete">Delete</string>

    <string name="dialog_rename">Rename file %s?</string>
    <string name="dialog_delete">Delete file %s?</string>

    <string name="toast_saved">Saved</string>

    <string name="hint_note_title">Title</string>
    <string name="hint_loading">Loading&#8230;</string>

    <string name="main_no_elements">No notes found</string>

    <string name="label_create_new">New</string>
    <string name="label_settings">Settings</string>

    <!-- Actually used just to prevent warnings -->
    <string name="pagination_start_hint">&lt;&lt;</string>
    <string name="pagination_backward_hint">&lt;</string>
    <string name="pagination_forward_hint">&gt;</string>
    <string name="pagination_end_hint">&gt;&gt;</string>

</resources>
