<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@drawable/pagination_top_border"
    android:elevation="4dp"
    android:orientation="horizontal"
    android:theme="@style/BottomToolbar">

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_backward_start"
        android:contentDescription="@string/pagination_start_hint"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_backward"
        android:contentDescription="@string/pagination_backward_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="1"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:inputType="number"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_forward"
        android:contentDescription="@string/pagination_forward_hint"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_forward_end"
        android:contentDescription="@string/pagination_end_hint"/>

</LinearLayout>